<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">All Docs Reader: Image Scanner</string>
    <string name="all_documents">All Documents</string>
    <string name="all_documents_child">View, Manage, and Share\nyour documents</string>
    <string name="image_scanner">Image Scanner</string>
    <string name="main_icon">Main Icon</string>
    <string name="all_file">All Files</string>
    <string name="pdf">PDF Files</string>
    <string name="word">Word Files</string>
    <string name="excel">Excel Files</string>
    <string name="power_point">PPT Files</string>
    <string name="text">Text Files</string>
    <string name="search">Search…</string>
    <string name="name">Name</string>
    <string name="size">Size</string>
    <string name="date">Date</string>
    <string name="allow_permission">Allow Permission</string>
    <string name="allow">Allow</string>
    <string name="documents_scanner">Documents\nScanner</string>
    <string name="qr_code_scanner">QR\nScanner</string>
    <string name="qr_code_generator">QR\nGenerator</string>
    <string name="base_storage_path">PDF Scanner/data/</string>
    <string name="base_staging_path">PDF Scanner/stage/</string>
    <string name="open_gallery">OPEN GALLERY</string>
    <string name="open_camera">OPEN CAMERA</string>
    <string name="add_page">Add Page</string>
    <string name="mergeImages" tools:ignore="ExtraTranslation">Merge Images</string>
    <string name="enter_filename">Enter File Name</string>
    <string name="convert_pdf">Convert pdf</string>
    <string name="privacyPolicy">Privacy Policy</string>
    <string name="rateus">Rate Us</string>
    <string name="more">More Apps</string>
    <string name="shareApp">Share App</string>
    <string name="quitApp">Quit App</string>
    <string name="Front_Page">Front Page</string>
    <string name="Back_Page">Back Page</string>
    <string name="Convert_to_pdf">Convert to pdf</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lets_go">GET STARTED</string>
    <string name="manage_permission">Users may be asked to grant the following permissions for proper app functionality.</string>
    <string name="id_card">ID Card\nScanner</string>
    <string name="PDFScanner">PDF Scanner</string>
    <string name="back_tv">Do you really want to Exit…?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="Alert">Alert!</string>
    <string name="copy">Copy</string>
    <string name="open">Open</string>
    <string name="Others">Others</string>
    <string name="image_to_npdf">Image to\nPDF</string>
    <string name="converters">Converters</string>
    <string name="text_to_pdf">Text to\n PDF</string>
    <string name="excel_to_pdf">Excel to\nPDF</string>
    <string name="viewer">Viewer</string>
    <string name="action_settings">Settings</string>
    <string name="interstitial_ad_sample">Interstitial Ad Sample</string>
    <string name="start_level">Level 1</string>
    <string name="next_level">Next Level</string>
    <string name="level_text">Level %1$d</string>
    <string name="select_images">Select Images</string>
    <string name="create_pdf">Create Pdf</string>
    <string name="i_have_attached_pdfs_to_this_message">I have attached file(s) to this message</string>
    <string name="pdf_type">application/pdf</string>
    <string name="txt_type">text/*</string>
    <string name="error_path_not_found">Sorry, we are unable to access the file at this location</string>
    <string name="open_file">Open File</string>
    <string name="error_open_file">An error occurred while opening the file. Please try reopening</string>
    <string name="pdf_ext">.pdf</string>
    <string name="pdf_suffix">_pdf</string>
    <string name="merge_select_file">Select files</string>
    <string name="merge_file">Merge files</string>
    <string name="snackbar_name_not_blank">Name cannot be blank</string>
    <string name="creating_pdf">Creating PDF</string>
    <string name="enter_file_name">Enter file name</string>
    <string name="snackbar_no_pdf_app">No PDF app installed</string>
    <string name="snackbar_no_pdf_selected">No PDFs Selected</string>
    <string name="warning">Warning</string>
    <string name="overwrite_message">here already exists a file with the same name. Do you want to overwrite?</string>
    <string name="image_scale_type">Set Image Scale Type</string>
    <string name="stretch_image">Stretch image to fit on page</string>
    <string name="maintain_aspect_ratio">Maintain aspect ratio of images</string>
    <string name="set_as_default">Set as default</string>
    <string name="ic_password_protect">Password Protect</string>
    <string name="edit_images_text">Edit Images</string>
    <string name="rearrange_images">Rearrange Image</string>
    <string name="add_margins">Add margin</string>
    <string name="show_pg_num">Page Number</string>
    <string name="add_watermark">Water Mark</string>
    <string name="page_color">Page Color</string>
    <string name="more_options">More Options</string>
    <string name="set_page_size_text">Set Page Size</string>
    <string name="b0_to_b10">B0 to B10</string>
    <string name="a0_to_a10">A0 to A10</string>
    <string name="tabloid" translatable="false">TABLOID</string>
    <string name="executive" translatable="false">EXECUTIVE</string>
    <string name="ledger" translatable="false">LEDGER</string>
    <string name="letter" translatable="false">LETTER</string>
    <string name="legal" translatable="false">LEGAL</string>
    <string name="a4" translatable="false">A4</string>
    <string name="default_page_size">DEFAULT ( %s )</string>
    <string name="images_selected">" %1$d image(s) selected."</string>
    <string name="successToast">Images successfully added.</string>
    <string-array name="array_page_sizes_b0_b10" translatable="false">
        <item>B0 (1000 x 1414 mm)</item>
        <item>B1 (707 x 1000 mm)</item>
        <item>B2 (500 x 707 mm)</item>
        <item>B3 (353 x 500 mm)</item>
        <item>B4 (250 x 353 mm)</item>
        <item>B5 (176 x 250 mm)</item>
        <item>B6 (125 x 176 mm)</item>
        <item>B7 (88 x 125 mm)</item>
        <item>B8 (62 x 88 mm)</item>
        <item>B9 (44 x 62 mm)</item>
        <item>B10 (31 x 44 mm)</item>
    </string-array>
    <string-array name="array_page_sizes_a0_b10" translatable="false">
        <item>A0 (841 x 1189 mm)</item>
        <item>A1 (594 x 841 mm)</item>
        <item>A2 (420 x 594 mm)</item>
        <item>A3 (297 x 420 mm)</item>
        <item>A4 (210 x 297 mm)</item>
        <item>A5 (148 x 210 mm)</item>
        <item>A6 (105 x 148 mm)</item>
        <item>A7 (74 x 105 mm)</item>
        <item>A8 (52 x 74 mm)</item>
        <item>A9 (37 x 52 mm)</item>
        <item>A10 (26 x 37 mm)</item>
    </string-array>
    <string-array name="fontStyles" translatable="false">
        <item>NORMAL</item>
        <item>BOLD</item>
        <item>ITALIC</item>
        <item>UNDERLINE</item>
        <item>STRIKETHRU</item>
        <item>BOLDITALIC</item>
    </string-array>
    <string name="storage_manager_permission_rationale">In Android 11, you need to allow a special storage permission</string>
    <string name="permission_denied_text">Permission Denied</string>
    <string name="storage_need_rationale_description">Storage permission is needed for proper functioning of app.</string>
    <string name="storage_need_rationale_for_not_ask_again_flag">\"You have chosen to never ask the permission again, but storage permission is needed for proper functioning of app. \"</string>
    <string name="enable_from_settings_text">Enable from settings</string>
    <string name="cancel_text">Cancel</string>
    <string name="ask_again_text">Ask Again</string>
    <string name="bundleKey">ImageUri</string>
    <string name="whatsappToast">Sorry! Images could not be added. Please select the images from our **Select Images** option.</string>
    <string name="example">Example : abc</string>
    <string name="snackbar_folder_not_created">Error on creating application folder.</string>
    <string name="snackbar_pdfCreated">PDF Created</string>
    <string name="snackbar_viewAction">View</string>
    <string name="one_more_thing_text">One more thing</string>
    <string name="allow_text">Allow</string>
    <string name="close_app_text">Close App</string>
    <string name="images_rearranged">Images rearranged</string>
    <string name="snackbar_images_added">Images cropped</string>
    <string name="snackbar_no_images">No Images selected</string>
    <string name="set_password">Set Password</string>
    <string name="enter_password_custom">Enter Password</string>
    <string name="example_pass_123">pass@123</string>
    <string name="remove_dialog">REMOVE</string>
    <string name="password_remove">Password Removed</string>
    <string name="snackbar_password_cannot_be_blank">Password can\'t be blank</string>
    <string name="save">Save</string>
    <string name="rotate">Rotate</string>
    <string name="showing_image">Showing %1$d of %2$d image(s)</string>
    <string name="crop_image">Crop Image</string>
    <string name="error_uri_not_found">Sorry, We are unable to access the cropped image. Please try again</string>
    <string name="done">Done</string>
    <string name="skip_text">Skip</string>
    <string name="save_first">Save Current Image First</string>
    <string name="set_scale_type">Set Scale Type</string>
    <string name="sort">Sort</string>
    <string name="remove_image_message">Are you sure you want to remove this image?</string>
    <string name="dont_show_again">Don\'t show again</string>
    <string name="sort_by_title">Sort By</string>
    <string name="cancel">CANCEL</string>
    <string name="cancel_small">Cancel</string>
    <string name="ok">Ok</string>
    <string name="top">Top</string>
    <string name="bottom">Bottom</string>
    <string name="right">Right</string>
    <string name="left">Left</string>
    <string name="page_x_of_n">Page X of N</string>
    <string name="page_x">X of N</string>
    <string name="x">X</string>
    <string name="choose_page_number_style">Choose Page Number Style</string>
    <string name="enter_text">Enter Text</string>
    <string name="enter_angle">Enter Angle</string>
    <string name="angle">Angle</string>
    <string name="choose_color">Choose Color</string>
    <string name="enter_font_size">Enter Font Size</string>
    <string name="watermark_font_size">Font Size</string>
    <string name="choose_watermark_font_family">Choose font family</string>
    <string name="choose_watermark_style">Choose style</string>
    <string name="snackbar_cannot_be_blank">Text cannot be blank</string>
    <string name="watermark_added">Watermark Added</string>
    <string name="cannot_add_watermark">Watermark could not be added to the PDF. Please check the PDF again.</string>
    <string name="watermarked_file">_watermarked.pdf</string>
    <string name="watermark_remove">Watermark Remove</string>
    <string name="select_excel">Select Excel File</string>
    <string name="install_file_manager">Please install filemanager</string>
    <string name="excel_tv_view_text">Excel file selected:</string>
    <string name="excel_selected">Excel file selected</string>
    <string name="title">Title</string>
    <string name="note">Note</string>
    <string name="type_here">Type here</string>
    <string name="no_small">No</string>
    <string name="yes_small">Yes</string>
    <string name="editing">Editing</string>
    <string name="are_you_sure_you_want_to_discard_this_editing">Are you sure you want to discard this editing?</string>
    <string name="rate_us_if_you_like_this_app">Rate us if you like this app</string>
    <string name="do_you_really_want_to_exit_app">Do you really want to exit app</string>
    <string name="rate_us">Rate us</string>
    <string name="exit">Exit</string>
</resources>