<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/privacy_policy"
            android:icon="@drawable/ic_privacy"
            android:title="@string/privacyPolicy" />
        <item
            android:id="@+id/rate_us"
            android:icon="@drawable/ic_rate_review"
            android:title="@string/rateus" />
        <item
            android:id="@+id/more_app"
            android:icon="@drawable/more"
            android:title="@string/more" />
        <item
            android:id="@+id/quit_app"
            android:icon="@drawable/ic_exit_"
            android:title="@string/quitApp" />
    </group>


</menu>