<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="@dimen/_7sdp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="@dimen/_7sdp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.cardview.widget.CardView
            android:id="@+id/backgroundLayout"
            android:layout_width="0dp"
            android:layout_height="@dimen/_150sdp"
            app:cardBackgroundColor="@color/color_card"
            app:cardCornerRadius="@dimen/_7sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_discard_changes" />
        </androidx.cardview.widget.CardView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="@dimen/_15sdp"
            app:layout_constraintTop_toBottomOf="@+id/backgroundLayout">

            <TextView
                android:id="@+id/tvHeading"
                style="@style/textHeading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_regular"
                android:text="@string/editing"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvDescription"
                style="@style/textHeading"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_regular"
                android:gravity="center"
                android:text="@string/are_you_sure_you_want_to_discard_this_editing"
                android:textColor="#535353"
                android:textSize="@dimen/_11sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvHeading" />


            <com.google.android.material.button.MaterialButton
                android:layout_marginTop="@dimen/_8sdp"
                android:id="@+id/btnNo"
                style="@style/textHeading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:minWidth="@dimen/_100sdp"
                android:text="@string/no_small"
                android:textAllCaps="false"
                android:textColor="@color/color_card"
                app:cornerRadius="@dimen/_7sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvDescription"
                app:strokeColor="@color/color_card"
                app:strokeWidth="@dimen/_1sdp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnYes"
                android:layout_marginTop="@dimen/_8sdp"
                style="@style/textHeading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/color_card"
                android:minWidth="@dimen/_100sdp"
                android:text="@string/yes_small"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:cornerRadius="@dimen/_7sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvDescription"
                app:strokeColor="@color/color_card"
                app:strokeWidth="@dimen/_1sdp" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>